--- a/trivia.html
+++ b/trivia.html
@@ -6,7 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Trivia Game</title>
 
-<link href='https://fonts.googleapis.com/css?family=Aclonica' rel='stylesheet'>
+<link href='https://fonts.googleapis.com/css?family=Asset' rel='stylesheet'>
+
+<link href='https://fonts.googleapis.com/css?family=Aclonica' rel='stylesheet'> 
 
     <!-- <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic"> -->
     <!-- loaded from the google fonts library -->
@@ -25,6 +27,8 @@
   <div id="container">
     <h1> Trivia Game </h1>
     <button id="btnStart"> Start Game </button>
+    <output id="question"></output>
+    <output id="answer"></output>
 </div>
 <script src="trivia.js"></script>
 </body>
