--- a/trivia.html
+++ b/trivia.html
@@ -4,22 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    
     <title>Ghazal Mansour</title>
 
 <link href='https://fonts.googleapis.com/css?family=Arbutus' rel='stylesheet'>
-
 <link href='https://fonts.googleapis.com/css?family=Arbutus Slab' rel='stylesheet'>
-
-    <!-- <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic"> -->
-    <!-- loaded from the google fonts library -->
-
-     <!-- <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.css"> --> 
-     <!-- loaded the normalized library which designed to set css settings to zero meaning like there's no margin, no border, and I have to do those manually  --> 
-
-     <!--<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/milligram/1.3.0/milligram.css"> --> 
-     <!-- loaded milligram which overrides some of the settings endless in the normalized stylesheet. -->
-
-    <!-- I used the https://milligram.io/ for the 3 stylesheets above -->
 
 <link href="trivia.css" rel ="stylesheet" type="text/css"> 
 </head>
@@ -28,7 +17,8 @@
     <h1> Trivia Game </h1>
     <button id="btnStart"> Start Question </button>
     <output id="question"></output>
-    <output id="answer"></output>
+    <output id="answer"><button id="btnAnswer">See Answer </button>
+    </output>
 </div>
 <script src="trivia.js"></script>
 </body>
