--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <link href='https://fonts.googleapis.com/css?family=Arbutus' rel='stylesheet'>
 <link href='https://fonts.googleapis.com/css?family=Arbutus Slab' rel='stylesheet'>
 
-<link href="trivia.css" rel ="stylesheet" type="text/css"> 
+<link href="Trivia.css" rel ="stylesheet" type="text/css"> 
 </head>
 <body>
   <div id="container">
@@ -20,6 +20,6 @@
     <output id="answer"><button id="btnAnswer">See Answer </button>
     </output>
 </div>
-<script src="trivia.js"></script>
+<script src="Trivia.js"></script>
 </body>
 </html>   
